# rpresence

./: Cargo.toml
src/: lib.rs  main.rs
src/ipc/: client.rs  utils.rs
src/ipc/platform/: unix_connection.rs  windows_connection.rs
src/json/: serialize.rs  utils.rs
src/rpc/: activity.rs  packet.rs
